src/styles/globals.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

@font-face {
  font-family: "Gotham light";
  src: url("../../asset/GothamLight.ttf");
  font-weight: 400;
  font-style: light;
}

@font-face {
  font-family: "Gotham";
  src: url("../../asset/GothamMedium.ttf");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Gotham bold";
  src: url("../../asset/GothamBold.ttf");
  font-weight: 700;
  font-style: normal;
}

* {
  font-family: "Gotham";
  color: white;
}

p {
  font-family: "Gotham light";
}

a {
  font-family: "Gotham light";
}

/* this line overwrites the "Services" link style in mobile menu  */
.MuiAccordionSummary-content {
  font-family: "Gotham light";
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

@tailwind base;
@tailwind components;
@tailwind utilities;

.bg-kp-dark {
  background-color: #060111;
}

.text-kp-dark {
  color: #060111;
}

.text-kp-purple {
  color: #8462f6;
}

.bg-kp-purple {
  background-color: #8462f6;
}

.gradient-text {
  color: transparent;
  -webkit-text-fill-color: transparent;
  display: block;
  background: -webkit-linear-gradient(left, #cd9bf4, #432ad9);
  background: linear-gradient(to right, #cd9bf4, #432ad9);
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -ms-background-clip: text;
  -o-background-clip: text;
}

/* gradient menu background */

.menu-background-gradient {
  background: rgb(132, 98, 246);
  background: -moz-linear-gradient(180deg, rgba(132, 98, 246, 1) 0%, rgba(67, 42, 217, 1) 79%);
  background: -webkit-linear-gradient(180deg, rgba(132, 98, 246, 1) 0%, rgba(67, 42, 217, 1) 79%);
  background: linear-gradient(180deg, rgba(132, 98, 246, 1) 0%, rgba(67, 42, 217, 1) 79%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#8462f6",endColorstr="#432ad9",GradientType=1);
}

/* Kingstarter/Kingsale phases cards gradient, incl. smooth transitioning */

.background-gradient-card {
  position: relative;
  overflow: hidden;
  min-height: 200px;
  background-image: linear-gradient(180deg, rgba(67, 42, 217, 1) 0%, rgba(132, 98, 246, 1) 79%);
  z-index: 1;
  transition: all 0.3s ease-in-out;
  border-radius: 16px;
}

.background-gradient-card::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-image: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(205, 155, 244, 1) 79%);
  z-index: -1;
  transition: opacity 0.3s ease-in-out;
  opacity: 0;
  border-radius: 16px;
}

.background-gradient-card:hover::before {
  opacity: 1;
  border-radius: 16px;
}

.background-gradient-card:hover h6,
.background-gradient-card:hover h3,
.background-gradient-card:hover p {
  color: #060111;
}

.background-glow {
  background-image: url("../../public/img/glow.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
}

/* hover effect on navbar links */

.nav-link {
  color: white;
  position: relative;
  transition: all 0.3s ease-in-out;
  font-weight: normal !important;
}

.nav-link:hover {
  color: transparent;
  -webkit-text-fill-color: transparent;
  background: -webkit-linear-gradient(left, #cd9bf4, #432ad9);
  background: linear-gradient(to right, #cd9bf4, #432ad9);
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -ms-background-clip: text;
  -o-background-clip: text;
  transform: scaleX(1.1);
  font-weight: 900;
}

.submenu-navlink:hover {
  color: #432ad9;
}

.social-links:hover path {
  fill: white;
}

/* radius for project cards */
.custom-border-radius {
  border-radius: 20px;
}

/* Gradient Border (not for buttons) */

.border-gradient {
  background: radial-gradient(circle at 100% 100%, #060111 0, #060111 10px, transparent 10px) 0% 0%/12px
      12px no-repeat,
    radial-gradient(circle at 0 100%, #060111 0, #060111 10px, transparent 10px) 100% 0%/12px 12px
      no-repeat,
    radial-gradient(circle at 100% 0, #060111 0, #060111 10px, transparent 10px) 0% 100%/12px 12px
      no-repeat,
    radial-gradient(circle at 0 0, #060111 0, #060111 10px, transparent 10px) 100% 100%/12px 12px
      no-repeat,
    linear-gradient(#060111, #060111) 50% 50% / calc(100% - 4px) calc(100% - 24px) no-repeat,
    linear-gradient(#060111, #060111) 50% 50% / calc(100% - 24px) calc(100% - 4px) no-repeat,
    linear-gradient(90deg, #432ad9 0%, #432ad9 9%, #cd9bf4 100%);
  box-sizing: border-box;
}

/* Buttons styles */

/* Transparent backround and gradient border buttons */

.button-border-gradient {
  border: none;
  display: inline-block;
  border-radius: 99px;
  color: white;
  position: relative;
  z-index: 1;
  font-size: 14px;
  padding: 16px 25px;
}

.button-border-gradient:before,
.button-border-gradient:after {
  content: " ";
  position: absolute;
  border-radius: 99px;
}

.button-border-gradient:before {
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: -2;
  background: #432ad9;
  background: -moz-linear-gradient(left, #432ad9 0%, #cd9bf4 100%);
  background: -webkit-linear-gradient(left, #432ad9 0%, #cd9bf4 100%);
  background: -o-linear-gradient(left, #432ad9 0%, #cd9bf4 100%);
  background: -ms-linear-gradient(left, #432ad9 0%, #cd9bf4 100%);
  background: linear-gradient(to right, #432ad9 0%, #cd9bf4 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#432ad9', endColorstr='#cd9bf4',GradientType=1 );
}

.button-border-gradient:after {
  top: 2px;
  bottom: 2px;
  left: 2px;
  right: 2px;
  background-color: #060111;
  z-index: -1;
  opacity: 1;
  transition: all 0.6s ease-in-out;
}

.button-border-gradient:hover:after {
  opacity: 0;
}

/* Purple background button */
.purple-gradient-button {
  background-image: white;
  background: linear-gradient(to right, #cd9bf4 0%, #432ad9 100%);
  background-clip: padding-box, border-box;
  background-origin: padding-box, border-box;
  transition: all 0.3s ease-in-out;
}

.purple-gradient-button:hover {
  background-image: white;
  background: white;
  transition: color 0.3s ease-in-out;
}

.purple-gradient-button:hover span {
  color: black;
  transition: color 0.3s ease-in-out;
}

.purple-gradient-button span {
  color: white;
}

/* filter effect will only be applied on non-touch screens */
@media (hover: hover) and (pointer: fine) {
  .gradient-effect-parent {
    background-color: transparent;
  }
  .gradient-effect-child {
    background-color: #432ad9;
    opacity: 60%;
    transition: 0.5s;
    filter: contrast(9);
    border-radius: inherit;
  }
  .gradient-effect-parent:hover .gradient-effect-child {
    background-color: transparent;
    opacity: 100%;
  }
}

/* applies to ProjectSocials component */
.media-icon {
  transform: scale(0.7);
  height: auto;
  fill: #8462f6;
}

/* applies to rocket image */
.drop-shadow {
  filter: drop-shadow(0px 3px 32px #8462f6);
}

.rocket-container {
  overflow: visible !important;
}

/* for the mobile carousel */

.slide-card {
  margin-right: 30px;
  left: 50%;
  transform: translateX(-50%);
}

.slick-list {
  width: 253px;
  margin-right: -30px;
  overflow: visible !important;
}

@keyframes rocketAnimation {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-30px);
    z-index: -1;
  }
}

.animate-rocket {
  animation: rocketAnimation 2s infinite alternate;
}

